--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
         <title>Flying Dead</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="./bird.js"></script>
+        <link rel="stylesheet" type="text/css" href="./bird.css">
+
     
 </head>
 <body>
-    <img src="GIF-sample.gif">
-    <img src="200.gif">
+
+         <div id="containerBird">
+       <img src="GIF-sample.gif" id="animatedBird" class="animatedBird1">
+        </div>
+
 </body>
 </html>
